# SoftwareRendering

./: CMakeLists.txt  README.md  main.cpp
src/export/bitmap/: Bitmap.cpp  Bitmap.h  Color.cpp  Color.h  Exporter.cpp  Exporter.h
src/geometry/: Vectors.cpp  Vectors.h
src/import/: ObjectReader.cpp  ObjectReader.h
src/renderer/: SoftwareRenderer.cpp  SoftwareRenderer.h  SoftwareRendering.cpp  SoftwareRendering.h
